[Maol] Initial version.

--- a/source/pom.xml
+++ b/source/pom.xml
@@ -10,12 +10,13 @@
 	</parent>
 	<groupId>com.mecosoft.poc.ddd</groupId>
 	<artifactId>second</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<name>Second</name>
 	<description>Second project DDD</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 	</properties>
 
 	<dependencies>
@@ -36,6 +37,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>${commons-beanutils.version}</version>
 		</dependency>
 	</dependencies>
 
