--- a/source/pom.xml
+++ b/source/pom.xml
@@ -43,6 +43,12 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>${commons-beanutils.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
